Working google drive integration

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,3 +1,4 @@
 %h2 Link Integrations
 
 %a{"href" => "#{@dropbox_link}", "target" => "_blank"} Dropbox
+%a{"href" => "#{@google_drive_link}", "target" => "_blank"} Google Drive
