--- a/app/views/integrations/oauth_redirect.html.haml
+++ b/app/views/integrations/oauth_redirect.html.haml
@@ -1,1 +1,3 @@
-%p An error occured: #{@error[:message].html_safe}
+.panel-section
+  .panel-row
+    .danger An error occured: #{@error[:message].html_safe}
