--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -13,3 +13,40 @@
  *= require_tree .
  *= require_self
  */
+
+@import "stylekit.css";
+
+.notification {
+  margin-top: 0.5rem !important;
+}
+
+a:hover {
+  text-decoration: none !important;
+}
+
+.select-all {
+  user-select: all;
+}
+
+#activation-code {
+  user-select: text !important;
+  resize: none;
+  background-color: transparent;
+  border: none;
+  width: 100%;
+  padding: 10px;
+  display: contents;
+
+  text-align: center;
+  margin: 10px;
+
+  outline: 0;
+  overflow: scroll;
+
+  -webkit-user-select: none;
+  -webkit-touch-callout: none;
+  -khtml-user-select: none;
+  -moz-user-select: none;
+  -ms-user-select: none;
+  -o-user-select: none;
+}
