--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -5,3 +5,6 @@
 
     %a.button.success{"href" => "#{@google_drive_link}", "target" => "_blank"}
       .label Google Drive
+
+    %a.button.warning{"href" => "#{@webdav_link}"}
+      .label WebDAV
