--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -1,10 +1,10 @@
-.panel-section
-  .button-group
-    %a.button.info{"href" => "#{@dropbox_link}", "target" => "_blank"}
-      .label Dropbox
+.sk-panel-section
+  .sk-button-group
+    %a.sk-button.info{"href" => "#{@dropbox_link}", "target" => "_blank"}
+      .sk-label Dropbox
 
-    %a.button.success{"href" => "#{@google_drive_link}", "target" => "_blank"}
-      .label Google Drive
+    %a.sk-button.success{"href" => "#{@google_drive_link}", "target" => "_blank"}
+      .sk-label Google Drive
 
-    %a.button.warning{"href" => "#{@webdav_link}"}
-      .label WebDAV
+    %a.sk-button.warning{"href" => "#{@webdav_link}"}
+      .sk-label WebDAV
