--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -9,13 +9,18 @@
   </head>
 
   <body class="sn-component">
-    <div class="panel">
-      <div class="header">
-        <h2 class="title">Link Integrations</h2>
+    <div class="sk-panel">
+      <div class="sk-panel-header">
+        <h2 class="sk-panel-header-title">Link Integrations</h2>
       </div>
 
-      <div class="content selectable">
+      <div class="sk-panel-content selectable">
         <%= yield %>
+      </div>
+
+      <div class="sk-panel-footer">
+        <div class="right">
+          <a class="info" href="https://standardnotes.org/help" target="_blank">Help</a>
       </div>
     </div>
   </body>
