No translate for chrome, causing issues where copying integration codee would also include <font> elements.

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,6 +2,9 @@
 <html>
   <head>
     <title>FileSafe Integrations</title>
+    <!-- Disable translating for this page in Chrome, so that <font> tags are not added to key area -->
+    <meta name="google" content="notranslate" />
+    
     <%= csrf_meta_tags %>
 
     <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
