--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -8,3 +8,6 @@
 
     %a.sk-button.warning{"href" => "#{@webdav_link}"}
       .sk-label WebDAV
+
+    %a.sk-button.neutral{"href" => "#{@aws_s3_link}"}
+      .sk-label AWS S3
