--- a/app/views/integrations/form_aws_s3.html.haml
+++ b/app/views/integrations/form_aws_s3.html.haml
@@ -2,7 +2,7 @@
   .sk-panel-form
     = form_tag({controller: "integrations", :action => "submit_form"}, :method => "post") do
       = fields_for :auth_data do |ad|
-        = ad.text_field :region, :placeholder => "Region", :required => true, :class => "sk-input contrast"
+        = ad.text_field :region, :placeholder => "Region, e.g., eu-central-1", :required => true, :class => "sk-input contrast"
         = ad.text_field :bucket, :placeholder => "S3 Bucket", :required => true, :class => "sk-input contrast"
         = ad.text_field :key, :placeholder => "Access Key ID", :required => true, :class => "sk-input contrast"
         = ad.password_field :secret, :placeholder => "Access Key Secret", :required => true, :class => "sk-input contrast"
