Revert "feat: Add other S3 compatible providers"
This reverts commit 7b16cbb2836d3e020ff3f2edf8da9c03af28c190.

--- a/app/views/application/index.html.haml
+++ b/app/views/application/index.html.haml
@@ -9,5 +9,5 @@
     %a.sk-button.warning{"href" => "#{@webdav_link}"}
       .sk-label WebDAV
 
-    %a.sk-button.neutral{"href" => "#{@s3_link}"}
-      .sk-label S3 Compatible
+    %a.sk-button.neutral{"href" => "#{@aws_s3_link}"}
+      .sk-label AWS S3
